Try without opening arg